# ribasome_frontend

./: cargo.toml
app/: Cargo.toml
app/assets/glb/: AF-Q8W3K0-F1.gltf
app/assets/shaders/: custom_draw.wgsl
app/src/: coordinate_system.rs  dock.rs  drag_and_drop.rs  errors.rs  lib.rs  light_rig.rs  main.rs  tooltip.rs
app/src/canvas/: mod.rs
app/src/materials/: lines.rs
app/src/state/: mod.rs
app/src/ui/: mod.rs
crates/bevy_marker_components/: Cargo.toml
crates/peritext/: Cargo.toml
crates/peritext/benches/: rich-text.rs
crates/peritext/examples/: bench.rs
crates/peritext/fuzz/fuzz_targets/: rich-text-apply.rs  rich-text-match.rs
crates/peritext/src/: actor.rs  lib.rs  main.rs
crates/peritext/src/rich_text/: mod.rs
crates/ribasome_state/: Cargo.toml
crates/ribasome_state/src/: camera.rs  lib.rs
crates/ribasome_state/src/tool/: mod.rs
crates/ribasome_ui/: Cargo.toml
crates/ribasome_ui/src/: command.rs
crates/rich_text/: Cargo.toml
crates/rich_text/fuzz/fuzz_targets/: basic.rs  five-actors.rs  rich-text-utf16.rs  rich-text.rs
crates/rich_text/src/: lib.rs
crates/rich_text/src/annotation/: citation.rs  mod.rs
crates/rich_text/src/rich_text/: cursor.rs  test.rs
plugins/bevy_add_tool/: Cargo.toml
plugins/bevy_add_tool/src/: lib.rs
plugins/bevy_add_tool/src/point/: mod.rs
plugins/bevy_add_tool/src/polyline/: mod.rs
plugins/bevy_cameras/: Cargo.toml
plugins/bevy_cameras/src/: api.rs  lib.rs  pan_orbit_camera.rs
plugins/bevy_cmd_palette_plugin/: Cargo.toml
plugins/bevy_cmd_palette_plugin/src/: command.rs  command_palette.rs  icons.rs  lib.rs
plugins/bevy_drag/: Cargo.toml
plugins/bevy_drag/examples/: simple_drag.rs
plugins/bevy_drag/src/: controller.rs  events.rs  lib.rs  math.rs  normalize.rs  picking.rs  popover.rs
plugins/bevy_drag/src/gizmo/: gizmo_material.rs  mod.rs
plugins/bevy_easymark_editor/: Cargo.toml
plugins/bevy_easymark_editor/src/: easy_mark_editor.rs  easy_mark_highlighter.rs  easy_mark_viewer.rs  lib.rs
plugins/bevy_editor/: Cargo.toml
plugins/bevy_editor/src/: lib.rs
plugins/bevy_line_drawer/: Cargo.toml
plugins/bevy_mesh_painter/: Cargo.toml  README.md
plugins/bevy_mesh_painter/assets/shaders/: paint_mask_material.wgsl  paintable_material.wgsl  standard_extension.wgsl
plugins/bevy_mesh_painter/src/: lib.rs  main.rs  paint_mask.rs  paintable.rs
plugins/bevy_popover/: Cargo.toml
plugins/bevy_popover/src/: events.rs  lib.rs
plugins/bevy_rich_text_editor/: Cargo.toml
plugins/bevy_rich_text_editor/src/: command.rs  lib.rs  text_buffer.rs
plugins/bevy_rich_text_editor/src/formatting/: citation.rs  mod.rs
plugins/bevy_transform_gizmo/: Cargo.toml
plugins/bevy_transform_gizmo/src/: lib.rs
plugins/bevy_ui_widgets/: Cargo.toml
plugins/bevy_ui_widgets/examples/: tooltip.rs
plugins/bevy_ui_widgets/src/widget/tooltip/: mod.rs
plugins/ribasome_ui_plugin/: Cargo.toml
plugins/ribasome_ui_plugin/src/: command.rs  command_palette.rs  lib.rs
