[package]
name = "ribasome_state"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11"
bevy_cameras = { path = "../../plugins/bevy_cameras"}
ribasome_models = { git = "https://github.com/hector-crean/ribasome_models", branch = "main" }
