[package]
name = "bevy_add_tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11"
bevy_mod_picking = { git = "https://github.com/aevyrie/bevy_mod_picking" }
bevy_mod_reqwest = "0.11.1"
reqwest = "0.11.18"

bevy_ui_widgets = { path = "../bevy_ui_widgets"}