[package]
name = "bevy_drag"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11"
bevy_cameras = { path = "../bevy_cameras" }
bevy_mod_picking = { version="0.15",  features=["all"] }
bevy_mod_raycast = "0.11.0"


bevy_egui = "0.21.0"


[[example]]
name = "simple_drag"
path = "./src/examples/simple_drag.rs"
