[package]
name = "bevy_editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11"
bevy_egui = "0.21.0"
bevy-inspector-egui = "0.19.0"
egui_dock = "0.6"
egui-gizmo = "0.11.0"

bevy_marker_components = {path = "../../crates/bevy_marker_components"}