[package]
name = "bevy_rich_text_editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24"
bevy_egui = "0.21"
rich_text = { path = "../../crates/rich_text" }
