[package]
name = "bevy_ui_widgets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11"
bevy_cameras = { path = "../bevy_cameras" }
bevy_mod_picking = { git = "https://github.com/aevyrie/bevy_mod_picking"}





[[example]]
name = "tooltip"
path = "examples/tooltip.rs"
